<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Formularz</string>
    <string name="title_activity_main">Formularz</string>
    <string name="name">Imię:</string>
    <string name="nameHint">Imię</string>
    <string name="surname">Nazwisko: </string>
    <string name="surnameHint">Nazwisko</string>
    <string name="birth_date">Data ur.:</string>
    <string name="descHint">Opis</string>
    <string name="desc">Opis: </string>
    <string name="blog">Blog: </string>
    <string name="blogHint">Blog + link</string>
    <string name="tel">Telefon: </string>
    <string name="telHint">Telefon</string>
    <string name="colour">Ulubiony kolor: </string>
    <string name="lang">Języki: </string>
    <string name="gender">Płeć: </string>
    <string name="isOnFb">Czy masz konto na Fb: </string>
    <string name="onFbSince">Na Fb od: </string>
    <string name="menu_clear">Wyczyść</string>

    <string-array name="langs_array">
        <item>angielski</item>
        <item>rosyjski</item>
        <item>niemiecki</item>
        <item>włoski</item>
    </string-array>
    <string-array name="genders_array">
        <item>m</item>
        <item>f</item>
        <item>n/a</item>
    </string-array>

    <string name="menu_form_list">Pokaż listę formularzy</string>
    <string name="menu_add_new">Dodaj nowy formularz</string>
    <string name="menu_add_form">Dodaj</string>
    <string name="menu_erase_db">Usun wszystkie zapisane formularze</string>
    <string name="menu_clear_menu">Wyczyść formularz</string>
    <string name="button_show_picker">Wybierz datę</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_form_details">FormDetailsActivity</string>

</resources>