<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp" 
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameHint" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/etSurname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surnameHint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/birthDate" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:endYear="2012"
                android:startYear="1900" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc" />

            <EditText
                android:id="@+id/etDesc"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:height="80dp"
                android:hint="@string/descHint"
                android:inputType="textMultiLine"
                android:singleLine="false" >

            </EditText>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvBlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blog" />

            <EditText
                android:id="@+id/etBlog"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blogHint"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:autoLink="web" 
                >

            </EditText>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone"
                android:autoLink="phone"
                 />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvColour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colour" />

            <MultiAutoCompleteTextView
                android:id="@+id/mactvColour"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang" />

            <MultiAutoCompleteTextView
                android:id="@+id/mactvLang"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <Spinner
                android:id="@+id/sGender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvFbAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isOnFb" />

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvOnFbSince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onFbSince" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        
    </LinearLayout>

</ScrollView>